# public

./: analyse.sh
c_analyse/: Makefile  analyse.c  auto.sh  out.txt  recoder_part.txt  result  simpilfy.c
c_analyse/old/: c_10.1  c_10.1.c  c_10.2  c_10.2.c
c_analyse/simplify/: Makefile  out.txt  run  simplify.c
env/: .emacs.el
env/.emacs.d/: bookmarks
env/.emacs.d/auto-save-list/: .saves-11879-ingenic.st.jz.com~  .saves-14561-ingenic.st.jz.com~  .saves-14877-ingenic.st.jz.com~  .saves-16468-ingenic.st.jz.com~  .saves-16484-ingenic.st.jz.com~  .saves-25112-ingenic.st.jz.com~  .saves-27692-ingenic.st.jz.com~  .saves-4851-ingenic.st.jz.com~  .saves-7183-ingenic.st.jz.com~  .saves-9199-ingenic.st.jz.com~
env/.emacs.d/eshell/: alias  history  lastdir
env/bash/: dircolors
env/emacs/: color-set-dark1.el  color-set-default.el  color-set-light1.el  color-set-old.el  cpu.emacs.el  site-start.linux-app.el  syn-keyword.el  verilog-mode.el
env/emacs/template/: DEFAULT.tpl  Makefile.tpl  README.tpl  TEMPLATE.cc.tpl  TEMPLATE.cpp.tpl  TEMPLATE.h.tpl  TEMPLATE.py.tpl  TEMPLATE.sv.tpl  TEMPLATE.svh.tpl  TEMPLATE.v.tpl  TEMPLATE.vh.tpl
simdTest/: CMakeLists.txt  README  mips.toolchain.cmake  testliw.c
simdTest/cse_20200820/: README  cseclient  cseserver  genext2fs  sim_main.cfg  testliw
simdTest/include/mxu3/: mxu3.h
simdTest/source/: test_LIW.c  test_LIW.h
simdTest/tools/: def_mxu3_asm.py  def_mxu3_disasm.py  mxu3_asm.py  mxu3_disasm.py
